cn/cn.css
.magic-symbol-small {
  background: url("/cn/glyphs/symbols_small.png");
  height: 15px;
  width: 15px;
}
.symbol_mana_0_small {
    background-position:0px 0px;
}
.symbol_mana_1_small {
    background-position:-15px 0px;
}
.symbol_mana_2_small {
    background-position:-30px 0px;
}
.symbol_mana_3_small {
    background-position:-45px 0px;
}
.symbol_mana_4_small {
    background-position:-60px 0px;
}
.symbol_mana_5_small {
    background-position:-75px 0px;
}
.symbol_mana_6_small {
    background-position:-90px 0px;
}
.symbol_mana_7_small {
    background-position:-105px 0px;
}
.symbol_mana_8_small {
    background-position:-120px 0px;
}
.symbol_mana_9_small {
    background-position:-135px 0px;
}
.symbol_mana_10_small {
    background-position:0px -15px;
}
.symbol_mana_11_small {
    background-position:-15px -15px;
}
.symbol_mana_12_small {
    background-position:-30px -15px;
}
.symbol_mana_13_small {
    background-position:-45px -15px;
}
.symbol_mana_14_small {
    background-position:-60px -15px;
}
.symbol_mana_15_small {
    background-position:-75px -15px;
}
.symbol_mana_16_small {
    background-position:-90px -15px;
}
.symbol_mana_17_small {
    background-position:-105px -15px;
}
.symbol_mana_18_small {
    background-position:-120px -15px;
}
.symbol_mana_19_small {
    background-position:-135px -15px;
}
.symbol_mana_20_small {
    background-position:0px -30px;
}
.symbol_mana_x_small {
    background-position:-15px -30px;
}
.symbol_mana_y_small {
    background-position:-30px -30px;
}
.symbol_mana_z_small {
    background-position:-45px -30px;
}
.symbol_mana_w_small {
    background-position:-60px -30px;
}
.symbol_mana_u_small {
    background-position:-75px -30px;
}
.symbol_mana_b_small {
    background-position:-90px -30px;
}
.symbol_mana_r_small {
    background-position:-105px -30px;
}
.symbol_mana_g_small {
    background-position:-120px -30px;
}
.symbol_snow_small {
    background-position:-135px -30px;
}
.symbol_mana_wu_small {
    background-position:0px -45px;
}
.symbol_mana_wb_small {
    background-position:-15px -45px;
}
.symbol_mana_ub_small {
    background-position:-30px -45px;
}
.symbol_mana_ur_small {
    background-position:-45px -45px;
}
.symbol_mana_br_small {
    background-position:-60px -45px;
}
.symbol_mana_bg_small {
    background-position:-75px -45px;
}
.symbol_mana_rw_small {
    background-position:-90px -45px;
}
.symbol_mana_rg_small {
    background-position:-105px -45px;
}
.symbol_mana_gw_small {
    background-position:-120px -45px;
}
.symbol_mana_gu_small {
    background-position:-135px -45px;
}
.symbol_mana_2w_small {
    background-position:0px -60px;
}
.symbol_mana_2u_small {
    background-position:-15px -60px;
}
.symbol_mana_2b_small {
    background-position:-30px -60px;
}
.symbol_mana_2r_small {
    background-position:-45px -60px;
}
.symbol_mana_2g_small {
    background-position:-60px -60px;
}
.symbol_mana_wp_small {
    background-position:-75px -60px;
}
.symbol_mana_up_small {
    background-position:-90px -60px;
}
.symbol_mana_bp_small {
    background-position:-105px -60px;
}
.symbol_mana_rp_small {
    background-position:-120px -60px;
}
.symbol_mana_gp_small {
    background-position:-135px -60px;
}
.symbol_tap_small {
    background-position:0px -75px;
}
.symbol_untap_small {
    background-position:-15px -75px;
}
.symbol_phyrexian_small {
    width: 9px;
    background-position:-141px -90px;
}

.aligncenter {
  text-align: center;
}
/*
.photo { 
  width: 300px; 
  text-align: center; 
}
*/ 
.photo .ui-widget-header { 
  margin: 1em 0; 
} 
.map { 
  width: 350px; 
  height: 350px; 
} 
.ui-tooltip { 
  max-width: 350px; 
} 

div.embed-wrap { /* solving problem of Google follow widget making an ugly square */
  padding-bottom: 20%;
  padding-top:20%;
}

a.footnote_ref {
  font-size: 70%;
  vertical-align: super;
}

div.footnotes {
  border-top: 1px solid #909090;
  color: #808080;
  font-size: 90%;
}

th {
  font-weight: bold;
  vertical-align: bottom;
}

th, td {
  padding: 0.5em;
}
td {
  vertical-align: top;
}

.list_cardimage {
  width:150px;
  height: auto;
}
.list_cardname {
  font-size: 110%;
}
.list_cardtype {
  font-style: italic;
}
.list_rules {
padding-top: 11px;
}
.list_mana_cost {}
.list_cmc {}

.footer {
    background-color: #f5f5f5;
    border-top: 1px solid #e5e5e5;
    margin-top: 70px;
    padding: 30px 0;
    text-align: center;
    font-size: 11px;
}
.footer p {
    color: #777;
    margin-bottom: 0;
}
.footer-links {
    margin: 10px 0;
}
.footer-links li {
    display: inline;
    padding: 0 2px;
}
.footer-links li:first-child {
    padding-left: 0;
}

.page-header {
	margin-top: 60px;
}

.pred_remove {
  padding-left: 1em;
  padding-right: 1em;
  background-color: #f5f5f5;
}

